# arma3-dynops

./: .editorconfig  .gitattributes  .gitignore  Cargo.toml  README.md  hemtt.toml  renovate.json  rust-clippy-results.sarif
.github/: dependabot.yml
.github/workflows/: arma.yml  build.yml  clippy-fix.yml  clippy.yml  nightly.yml  pr.yml  reusable-build.yml  reusable-clippy.yml  rust-clippy.yml
.hemtt/: lints.toml  project.toml
addons/civilians/: $PBOPREFIX$  CfgFunctions.hpp  XEH_postInit.sqf  config.cpp  fnc_onCivilianCasualtyListUpdated.sqf  fnc_onCivilianKilled.sqf  script_component.hpp
addons/conversation/: $PBOPREFIX$  Cfg3DEN.hpp  CfgFunctions.hpp  CfgMissions.hpp  CfgModules.hpp  CfgRemoteExec.hpp  XEH_preInit.sqf  config.cpp  fnc_agentReply.sqf  fnc_initAgent.sqf  fnc_onAgentKilled.sqf  fnc_onDirectMessage.sqf  fnc_onMessage.sqf  script_component.hpp
addons/dynops/: $PBOPREFIX$
addons/dynsim/: $PBOPREFIX$  CfgFunctions.hpp  XEH_postInit.sqf  XEH_preInit.sqf  config.cpp  fnc_onPathCalculated.sqf  script_component.hpp
addons/extension/: $PBOPREFIX$  CfgFunctions.hpp  XEH_preInit.sqf  XEH_preStart.sqf  config.cpp  fnc_call.sqf  fnc_callExtension.sqf  fnc_callback.sqf  fnc_getUuid.sqf  fnc_uuid.sqf  script_component.hpp
addons/factions/: $PBOPREFIX$  CfgFunctions.hpp  XEH_preInit.sqf  fnc_factionArsenal.sqf  fnc_factionStaticData.sqf  fnc_getFactionData.sqf  fnc_getFactionGroups.sqf  fnc_getFactionSideId.sqf  fnc_getFactionUnits.sqf  fnc_initFactions.sqf  script_component.hpp
addons/intel/: $PBOPREFIX$  CfgEventHandlers.hpp  CfgFunctions.hpp  CfgNotifications.hpp  XEH_preInit.sqf  config.cpp  fnc_addIntelPoints.sqf  fnc_deliverIntel.sqf  fnc_getIntelPoints.sqf  fnc_initLaptop.sqf  script_component.hpp
addons/locations/: $PBOPREFIX$  CfgFunctions.hpp  XEH_postInit.sqf  config.cpp  fnc_detectLocations.backup.sqf  fnc_detectLocations.sqf  fnc_detectLocationsOld.sqf  fnc_getAirports.sqf  fnc_getAllMapObjects.sqf  fnc_initLocations.sqf  script_component.hpp
addons/main/: $PBOPREFIX$  CfgEventHandlers.hpp  CfgFunctions.hpp  XEH_postInit.sqf  config.cpp  fnc_hashAdd.sqf  fnc_perfLog.sqf  script_component.hpp  script_macros_common.hpp  script_mod.hpp  script_version.hpp
addons/missions/: $PBOPREFIX$  config.cpp  (+1 more)
data/: objects.Altis.txt  objects.Stratis.txt
extensions/dynops/: Cargo.toml
extensions/dynops/data/: objects.Altis.txt  objects.Chernarus2020.txt  objects.Livonia.txt  objects.Malden.txt  objects.Stratis.txt  objects.Tanoa.txt
extensions/dynops/src/: cluster.rs  datetime.rs  echo.rs  lib.rs  main.rs  misc.rs  types.rs
extensions/dynops/src/cluster/: coord.rs  kdtree.rs  mvee.rs  types.rs
extensions/dynops/src/data/: buildings.Altis.csv  buildings.Enoch.csv  buildings.Malden.csv  buildings.Stratis.csv  buildings.Tanoa.csv  buildings.cup_chernarus_a3.csv  coordinates.Altis.txt
extensions/dynops/src/testdata/: objects.Altis.txt  objects.Livonia.txt  objects.Stratis.txt  objects.Tanoa.txt
extensions/dynops/tests/: integration.rs  invocation.rs
scripts/: PopulateCfgFunctions.ps1  cfgfunctions.py
src/: bounding.rs  chat.rs  cluster.rs  kdtree.rs  lib.rs  main.rs  shape.rs  types.rs  unique.rs
tests/: integration.rs
(+56 files in other folders)
