[package]
authors = ["DarkWanderer <elquentaro@gmail.com>"]
edition = "2018"
# name of test executable, main library defined in next section
name = "dynops-test"
version = "0.1.0"

[lib]
bench = false
crate-type = ["cdylib", "rlib"]
name = "dynops"

[dependencies]
arma-rs = { version = "*", features = ["uuid"] }
chatgpt_rs = { version = "*", features = ["functions"] }
image = "*"
lazy_static = "*"
libc = "*"
nalgebra = "*"
serde = "*"
tokio = { version = "*", features = ["full"] }
uuid = { version = "*", features = ["v4"] }

[profile.dev]
panic = "unwind"

[profile.release]
panic = "unwind"
