[package]
authors = ["DarkWanderer <elquentaro@gmail.com>"]
edition = "2018"
name = "dynops"
version = "0.1.0"

[lib]
bench = false
crate-type = ["cdylib", "rlib"]

[dependencies]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
chrono = "*"
libc = "*"
nalgebra = "*"
image = "*"
uuid = {version = "*", features = ["v4"]}

[profile.dev]
panic = "unwind"

[profile.release]
panic = "unwind"
